2025-01-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/exde.el: Enable display time mode.

2025-01-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+exwm--command-line-handler): Handle --exde as well as
	--exwm.
	* site-lisp/exde.el: Rename from exwm-settings.
	* packages.el: Add exwm, xelb, exwm-firefox.

	* init.el: Add kagi.com to webjump-sites.

	* exwm-settings.el: Move rime workaround for EXWM to exwm-settings.el.

	* init.el: bind puni commands in lisp-mode-shared-map instead of
	lisp-data-mode-map.

	* site-lisp/consult-omni-kagi.el: New file.

	* site-lisp/exwm-settings.el (exwm-input-prefix-keys): Add ?\M-s.

2025-01-03  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind "M-g o" to consult-org-heading in org-mode-map.

	* site-lisp/consult-kill.el (consult-kill): Simplify code.

	* init.el (+exwm--command-line-handler): Handle --exwm command
	line argument.
	(command-line-functions): Add +exwm--command-line-handler.

	* site-lisp/exwm-settings.el (exwm-input-global-keys): Add
	alternative keybindings for ms-windows.
	(exwm-input-prefix-key): Add ?\M-o

	* site-lisp/tui/tui.el: tui-kill drops dependency on tik.
	(tui--kill-callback): New function.

	* init.el (+indent-tabs-mode--hack-local-variables-h): Renamed
	from `+indent-tabs-mode--find-file-h'.  It should be added to
	hack-local-variables-hook now.

	* site-lisp/exwm-settings.el: Enable exwm-xim-mode by default.
	Add package exwm-firefox.

	* init.el: Add GitHub and CodeBerg to webjump-sites.

2025-01-02  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (save-interprogram-paste-before-kill): Set to t.

	* init.el (rime-input-method@exwm-xim): workaround for EXWM-XIM
	Set rime--temporarily-ignore-predicates to t to force enable rime
	even if meow is enabled
	(+custom-faces): Enlarge the height of tab-bar by adding a
	flat-button box
	(+custom-faces): Simplify header face

	* site-lisp/ctags-menu.el
	(ctags-menu--languages): Signal an error when the ctags program
	is not universal ctags